test/resources/ValidPrograms/forward_declared_class.lo
class Main() {
void main(){ B b; }
}
class B() {
}
