test/resources/InvalidPrograms/param_mismatch_detail.lo
class Main(){
  int main(this Main, int x){
    return x;
  }
}
class Foo(){
  int bar(this Foo, int x){
    return x;
  }
}
